--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    
+    <h1>Rock Paper Scissors</h1>
+    <div id="choices">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+    </div>
+    <div id="result"></div>
+    <div id="score"></div>
+    <div id="winner"></div>
 </body>
 </html>
